# stage-animation-physique

./: LICENSE  ProjectHome.md  README.txt
bulletTest/: CMakeLists.txt
bulletTest/data/: Example1.bvh  Example1.txt  walk.txt  walk2.bvh  walk2.txt
bulletTest/src/: DebugDraw.cpp  DebugDraw.h  MotionSave.cpp  Perso.cpp  Perso.h  RagDoll.cpp  RagDoll.h  Skeleton.cpp  Skeleton.h  SkeletonMesh.cpp  SkeletonMesh.h  main.cpp
bvh/src/: Makefile  array.c  array.h  build  parser.c  parser.h  vec.h
bvhTest/: CMakeLists.txt
bvhTest/src/: Perso.cpp  Perso.h  main.cpp  motion_testmain.c
mocap/src/: ActorRender.cpp  ActorRender.h  ActorRenderFil.cpp  ActorRenderFil.h  ActorRenderSkin.cpp  ActorRenderSkin.h  Bvh.cpp  Bvh.h  BvhLoader.cpp  Joint.cpp  Joint.h  Mat4f.cpp  MocapLoader.h  MocapManipulator.h  Parser.cpp  SkeletalData.cpp  SkinLoader.cpp
moteurGraphique/: CMakeLists.txt
moteurGraphique/src/: Erreur.h  Moteur.cpp  Moteur.h  MoteurGraphique.h  Outils.h
moteurGraphique/src/Math/: Couleur.cpp  Matrix3.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Random.cpp  Transform.cpp  Transform.h  Vector3.h
moteurGraphique/src/Moteur2D/: Monde2D.h
moteurGraphique/src/Moteur2D/Objet2D/: Char2D.cpp  Objet2D.cpp  Objet2D.h  String2D.cpp  String2D.h
moteurGraphique/src/Moteur3D/: Camera.cpp  Camera.h  Material.h  Monde3D.cpp
moteurGraphique/src/Moteur3D/Objet3D/: Lumiere.cpp  Lumiere.h  Objet3D.h
moteurGraphique/src/Ressource/: Image.h  Mesh.cpp  Mesh.h  Ressource.h  RessourceManager.cpp  RessourceManager.h  Texture.cpp  Texture.h
moteurGraphique/src/Ressource/Mesh/: Capsule.cpp  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
moteurGraphiqueTest/: CMakeLists.txt
moteurGraphiqueTest/data/: carl_anim.smd
moteurGraphiqueTest/src/: main.cpp
ragDollTest/: CMakeLists.txt
ragDollTest/src/: RagDoll.h  TransformConv.cpp  main.cpp
trunk/bulletTest/: CMakeLists.txt
trunk/bulletTest/data/: Example1.txt  walk.txt  walk2.txt
trunk/bulletTest/src/: DebugDraw.cpp  DebugDraw.h  MotionSave.h  Perso.cpp  Perso.h  RagDoll.cpp  RagDoll.h  Skeleton.cpp  Skeleton.h  SkeletonMesh.cpp  SkeletonMesh.h  TransformConv.cpp  TransformConv.h  main.cpp
trunk/bvh/: CMakeLists.txt
trunk/bvh/src/: array.h  bvh.c  bvh.h  motion.c  motion.h  parser.h
trunk/bvhTest/: CMakeLists.txt
trunk/bvhTest/src/: Perso.cpp  main.cpp  motion_testmain.c
trunk/mocap/: CMakeLists.txt
trunk/mocap/src/: Bvh.cpp  Bvh.h  BvhLoader.h  Mat4f.h  MocapData.cpp  MocapData.h  MocapLoader.cpp  MocapManipulator.cpp  Parser.h  Point3D.cpp  Point3D.h  SkeletalData.h  SkinData.cpp  SkinData.h  SkinLoader.h  misc.cpp  misc.h
trunk/moteurGraphique/: CMakeLists.txt
trunk/moteurGraphique/src/: Moteur.cpp  Moteur.h  Outils.cpp  Type.cpp  Type.h
trunk/moteurGraphique/src/Math/: Couleur.cpp  Couleur.h  Random.h  Transform.cpp  Transform.h  Vecteur2.cpp  Vecteur2.h  Vector3.h
trunk/moteurGraphique/src/Moteur2D/: Monde2D.cpp
trunk/moteurGraphique/src/Moteur2D/Objet2D/: Char2D.h  Objet2D.h
trunk/moteurGraphique/src/Moteur3D/: Camera.cpp  Camera.h  Material.cpp  Monde3D.cpp  Monde3D.h
trunk/moteurGraphique/src/Moteur3D/Objet3D/: Lumiere.h  Objet3D.cpp
trunk/moteurGraphique/src/Ressource/: Image.cpp  Mesh.cpp  Mesh.h  RessourceManager.h  Texture.cpp  Texture.h
trunk/moteurGraphique/src/Ressource/Mesh/: Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.h  Sphere.cpp  Sphere.h
trunk/moteurGraphiqueTest/: CMakeLists.txt
trunk/moteurGraphiqueTest/data/: carl_skin.smd
trunk/moteurGraphiqueTest/src/: main.cpp
trunk/ragDollTest/src/: DebugDraw.cpp  RagDoll.cpp  main.cpp
